# RE9_Still_Scan

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  linux.yaml  new_scene_scan_layers.yaml  scene01_scan_layers.yaml  scene04_indoor_scan_layers.yaml  scene_2_no_lamp_scan_layers.yaml  scene_2_scan_layers.yaml  still_scan_layers.yaml
data/scene_2_capture/: README.md
data/scene_points/scene_3.1/: README.md  scene_3.1_5layer_dense_positions.csv  scene_3.1_5layer_dense_positions.json  scene_3.1_5layer_dense_scan_layers.yaml  scene_3.1_points.csv  scene_3.1_points.json
scripts/: analyze_existing_video.ps1  analyze_stutter_all.py  analyze_stutter_all.sh  check_obs_settings.py  one_click_record.ps1  patch_lua_logger.ps1  record_and_score.ps1  replay_trajectory.py  replay_trajectory.sh  restore_lua_backup.ps1  scan_gui.sh  scan_low_to_high4000_gui.sh  scan_new_scenes_gui.py  scan_scene01_gui.py  scan_scene01_gui.sh  scan_scene04_indoor_gui.py  scan_scene1_extra_gui.py  scan_stills_gui.ps1  scan_stills_gui.py  scan_topstart4000_gui.sh  setup_laion_repo.ps1  setup_linux.sh  setup_windows.ps1
src/re9_pose_recorder/: __init__.py  align_pose.py  bad_still_detector.py  cli.py  config.py  laion_scorer.py  laion_setup.py  lua_control.py  lua_patcher.py  obs_control.py  paths.py  record_gui.py  report.py  scan_monitor.py  scan_recorder.py  still_scan.py  still_scan_gui.py  stutter_analyzer.py  trajectory.py  trajectory_replay.py  trajectory_replay_gui.py  utils.py  video_extract.py
tests/: test_still_scan_hull.py
(+72 files in other folders)
